--- a/index.html
+++ b/index.html
@@ -5,54 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solar Charge Controller Project</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        header, footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 1em 0;
-        }
-        nav {
-            background-color: #444;
-            padding: 0.5em 0;
-            text-align: center;
-        }
-        nav a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-        }
-        section {
-            padding: 20px;
-        }
-        h2 {
-            color: #333;
-        }
-        .container {
-            width: 80%;
-            margin: 0 auto;
-        }
-        .team-member {
-            margin-bottom: 20px;
-        }
-    </style>
 </head>
 <body>
     <header>
         <h1>Building an Efficient Maximum Power Point Tracking (MPPT) Solar Charge Controller</h1>
     </header>
     <nav>
-        <a href="#about">About the Team</a>
-        <a href="#background">Background</a>
-        <a href="#design">Design</a>
-        <a href="#results">Results</a>
-        <a href="#acknowledgment">Acknowledgment</a>
-        <a href="#report">Final Report</a>
+        <ul>
+            <li><a href="#about">About the Team</a></li>
+            <li><a href="#background">Background</a></li>
+            <li><a href="#design">Design</a></li>
+            <li><a href="#results">Results</a></li>
+            <li><a href="#acknowledgment">Acknowledgment</a></li>
+            <li><a href="#report">Final Report</a></li>
+        </ul>
     </nav>
     <section id="about">
         <div class="container">
@@ -87,7 +53,6 @@
     <section id="results">
         <div class="container">
             <h2>Results/Findings</h2>
-            <p>Some significant results of our project include:</p>
             <ul>
                 <li>Successful implementation of the MPPT algorithm</li>
                 <li>Optimized energy extraction from solar panels under varying conditions</li>
