Added progress report

--- a/index.html
+++ b/index.html
@@ -26,16 +26,19 @@
             <div class="team-member">
                 <h3>Ben Coupland</h3>
                 <p>Student ID: V00176669</p>
+                <p> About Ben! </p>
             </div>
             <div class="team-member">
                 <h3>Angel Ibelegbu</h3>
                 <p>Student ID: V00919730</p>
+                <p> About Angel! </p>
             </div>
             <div class="team-member">
                 <h3>Jenna Hilderman</h3>
                 <p>Student ID: V00870217</p>
+                <p> About Jenna! </p>
             </div>
-            <p>Faculty Supervisor: Dr. Mihai Sima</p>
+            <h3>Faculty Supervisor: Dr. Mihai Sima</h3>
         </div>
     </section>
     <section id="background">
@@ -69,6 +72,8 @@
     </section>
     <section id="report">
         <div class="container">
+            <h2>Final Report</h2>
+            <p><a href="ECE 499 - Progress Report - Group 19.pdf" target="_blank">Download Progress Report</a></p>
             <h2>Final Report</h2>
             <p><a href="path/to/your/final-report.pdf" target="_blank">Download Final Report</a></p>
         </div>
