--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#about">About the Team</a></li>
-            <li><a href="#background">Background</a></li>
-            <li><a href="#design">Design</a></li>
-            <li><a href="#results">Results</a></li>
-            <li><a href="#acknowledgment">Acknowledgment</a></li>
-            <li><a href="#report">Final Report</a></li>
+            <a href="#about">About the Team</a>
+            <a href="#background">Background</a>
+            <a href="#design">Design</a>
+            <a href="#results">Results</a>
+            <a href="#acknowledgment">Acknowledgment</a>
+            <a href="#report">Academic Reports</a>
         </ul>
     </nav>
     <section id="about">
@@ -72,7 +72,7 @@
     </section>
     <section id="report">
         <div class="container">
-            <h2>Final Report</h2>
+            <h2>Progress Report</h2>
             <p><a href="ECE 499 - Progress Report - Group 19.pdf" target="_blank">Download Progress Report</a></p>
             <h2>Final Report</h2>
             <p><a href="path/to/your/final-report.pdf" target="_blank">Download Final Report</a></p>
