fixed banner and footer

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             <a href="#report">Academic Reports</a>
         </ul>
     </nav>
+    <div class="banner">
+        <div class="banner-text">
+          <h1>ECE499 Group 19</h1>
+        </div>
+      </div>
     <section id="about">
         <div class="container">
             <h2>About the Team</h2>
@@ -79,7 +84,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; 2024 Solar Charge Controller Project Team</p>
+        <p>&copy; 2024 Solar Charge Controller Project ECE 499 Group 19</p>
     </footer>
 </body>
 </html>
