--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             <p><a href="path/to/your/final-report.pdf" target="_blank">Download Final Report</a></p>
         </div>
     </section>
-    <footer>
+    <div class="footer">
         <p>&copy; 2024 Solar Charge Controller Project ECE 499 Group 19</p>
-    </footer>
+    </div>
 </body>
 </html>
