--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Building an Efficient Maximum Power Point Tracking (MPPT) Solar Charge Controller</h1>
-    </header>
-    <nav>
+    <div class="navigation"></div>
         <ul>
             <a href="#about">About the Team</a>
             <a href="#background">Background</a>
@@ -19,12 +16,12 @@
             <a href="#acknowledgment">Acknowledgment</a>
             <a href="#report">Academic Reports</a>
         </ul>
-    </nav>
+    </div>
     <div class="banner">
         <div class="banner-text">
-          <h1>ECE499 Group 19</h1>
+            <h1>Building an Efficient Maximum Power Point Tracking (MPPT) Solar Charge Controller</h1>
         </div>
-      </div>
+    </div>
     <section id="about">
         <div class="container">
             <h2>About the Team</h2>
