--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="navigation"></div>
+    <div class="navigation">
         <ul>
             <a href="#about">About the Team</a>
             <a href="#background">Background</a>
