--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="navigation">
         <ul>
-            <a href="#about" class="nav">About the Team</a>
-            <a href="#background" class="nav">Background</a>
-            <a href="#design" class="nav">Design</a>
-            <a href="#results" class="nav">Results</a>
-            <a href="#acknowledgment" class="nav">Acknowledgment</a>
-            <a href="#report" class="nav">Academic Reports</a>
+            <a href="#about" class="nav-link">About the Team</a>
+            <a href="#background" class="nav-link">Background</a>
+            <a href="#design" class="nav-link">Design</a>
+            <a href="#results" class="nav-link">Results</a>
+            <a href="#acknowledgment" class="nav-link">Acknowledgment</a>
+            <a href="#report" class="nav-link">Academic Reports</a>
         </ul>
     </div>
     <div class="banner">
