TRYING TO FIX SPACING

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="navigation">
         <ul>
-            <a href="#about" class="nav-link">About the Team</a>
-            <a href="#background" class="nav-link">Background</a>
-            <a href="#design" class="nav-link">Design</a>
-            <a href="#results" class="nav-link">Results</a>
-            <a href="#acknowledgment" class="nav-link">Acknowledgment</a>
-            <a href="#report" class="nav-link">Academic Reports</a>
+            <li><a href="#about" class="nav-link">About the Team</a></li>
+            <li><a href="#background" class="nav-link">Background</a></li>
+            <li><a href="#design" class="nav-link">Design</a></li>
+            <li><a href="#results" class="nav-link">Results</a></li>
+            <li><a href="#acknowledgment" class="nav-link">Acknowledgment</a></li>
+            <li><a href="#report" class="nav-link">Academic Reports</a></li>
         </ul>
     </div>
     <div class="banner">
@@ -28,17 +28,17 @@
             <div class="team-member">
                 <h3>Ben Coupland</h3>
                 <p>Student ID: V00176669</p>
-                <p> About Ben! </p>
+                <p>About Ben!</p>
             </div>
             <div class="team-member">
                 <h3>Angel Ibelegbu</h3>
                 <p>Student ID: V00919730</p>
-                <p> About Angel! </p>
+                <p>About Angel!</p>
             </div>
             <div class="team-member">
                 <h3>Jenna Hilderman</h3>
                 <p>Student ID: V00870217</p>
-                <p> About Jenna! </p>
+                <p>About Jenna!</p>
             </div>
             <h3>Faculty Supervisor: Dr. Mihai Sima</h3>
         </div>
