--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
     </section>
     <section id="report">
         <div class="container">
-            <h2>Progress Report</h2>
+            <h2>Academic Reports</h2>
+            <h3>Progress Report</h3>
             <p><a href="ECE 499 - Progress Report - Group 19.pdf" target="_blank">Download Progress Report</a></p>
-            <h2>Final Report</h2>
+            <h3>Final Report</h3>
             <p><a href="path/to/your/final-report.pdf" target="_blank">Download Final Report</a></p>
         </div>
     </section>
