fixed some spacing and colors added fancy font

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solar Charge Controller Project</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&family=Satisfy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,7 +22,7 @@
     </div>
     <div class="banner">
         <div class="banner-text">
-            <h1>Building an Efficient Maximum Power Point Tracking (MPPT) Solar Charge Controller</h1>
+            <h1>Building an Efficient Maximum Power Point Tracking Solar Charge Controller</h1>
         </div>
     </div>
     <section id="about">
@@ -83,6 +86,9 @@
             <h3>Final Report</h3>
             <p><a href="path/to/your/final-report.pdf" target="_blank">Download Final Report</a></p>
         </div>
+    </section>
+    <section id="references">
+        
     </section>
     <div class="footer">
         <p>&copy; 2024 Solar Charge Controller Project ECE 499 Group 19</p>
