added about sima

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
             <div class="team-member">
                 <h3>Jenna Hilderman</h3>
                 <p>Student ID: V00870217</p>
-                <p>About Jenna!</p>
+                <p>Jenna is pursuing a Bachelor of Engineering in Electrical Engineering at the University of Victoria. She is deeply engaged in a project on Maximum Power Point Tracking (MPPT) for photovoltaic systems. Her work for this project involves integrating an MPPT algorithm to improve performance, especially under partial shading conditions. Proficient in C, Python, HTML, CSS and Matlab, Jenna leverages her technical and analytical skills to tackle complex engineering challenges. Jenna is advancing her engineering career through continuous learning and innovation. Her adaptability to new technologies and methodologies drives her ambition to contribute significantly to sustainable energy.</p>
             </div>
             <h3>Faculty Supervisor: Dr. Mihai Sima</h3>
+            <p>Dr. Mihai Sima, an expert in computers, software, networking, electronics, and energy, supervises this project. His extensive knowledge and guidance have been greatly appreciated. Dr. Sima's expertise and support contributed to our project's progress and success.</p>
         </div>
     </section>
     <section id="background">
@@ -88,7 +89,7 @@
         </div>
     </section>
     <section id="references">
-        
+
     </section>
     <div class="footer">
         <p>&copy; 2024 Solar Charge Controller Project ECE 499 Group 19</p>
