--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     <section id="background">
         <div class="container">
             <h2>Background</h2>
-            <p>The global demand for renewable energy sources is increasing as the world seeks sustainable solutions to combat climate change. Solar energy, one of the most abundant and accessible sources of renewable energy, has become a key focus for innovation and development. Solar panels, however, face the challenge of efficiently converting sunlight into electrical energy under varying environmental conditions. To address this challenge, Maximum Power Point Tracking (MPPT) technology has been developed.</p>
-            <p>MPPT solar charge controllers play a crucial role in optimizing the performance of solar panels. By continuously adjusting the operating point of the panels, these controllers ensure that the panels operate at their maximum power point, regardless of changes in sunlight intensity, temperature, or other environmental factors. This optimization can lead to a significant increase in energy conversion efficiency, often by 30-40% compared to traditional methods.</p>
-            <p>The significance of MPPT technology extends beyond efficiency gains. It enables more reliable and consistent energy production, which is essential for off-grid living and remote applications where stable power supply is critical. Moreover, the improved efficiency translates to reduced costs and smaller system sizes, making solar energy systems more accessible and practical for a wider range of users.</p>
-            <p>This project aims to design and build an efficient MPPT solar charge controller. By leveraging the latest advancements in power electronics and microcontroller technology, our goal is to develop a solution that not only enhances energy conversion efficiency but also provides a robust and user-friendly interface for monitoring and control. The successful implementation of this project will contribute to the broader adoption of solar energy, supporting global efforts towards a sustainable future.</p>
+            <p>The global demand for renewable energy sources is increasing as the world seeks sustainable solutions. Solar energy, one of the most abundant and accessible renewable energy sources, has become a key focus for innovation and development. Solar panels, however, face the challenge of efficiently converting sunlight into electrical energy under varying environmental conditions. Maximum Power Point Tracking (MPPT) improves the efficiency of solar panels.</p>
+            <p>MPPT solar charge controllers play a crucial role in optimizing solar panel performance. By continuously adjusting the panels' operating point, these controllers strive to keep the panels operating at their maximum power point, regardless of changes in sunlight intensity, temperature, or other environmental factors. This optimization can significantly increase energy conversion efficiency, often by 30-40% compared to traditional methods.</p>
+            <p>MPPT technology is significant beyond efficiency gains. It plays a crucial role in making solar energy more accessible and practical. By enabling more reliable and consistent energy production, MPPT technology is essential for off-grid living and remote applications where a stable power supply is critical.</p>
+            <p>This project aims to design and build an efficient MPPT solar charge controller that will contribute to the broader adoption of solar energy. Our goal is to develop a solution that enhances energy conversion efficiency and provides a robust and user-friendly interface for monitoring and control.</p>
         </div>
     </section>
     <section id="design">
@@ -64,7 +64,7 @@
     </section>
     <section id="results">
         <div class="container">
-            <h2>Results/Findings</h2>
+            <h2>Results & Findings</h2>
             <ul>
                 <li>Successful implementation of the MPPT algorithm</li>
                 <li>Optimized energy extraction from solar panels under varying conditions</li>
