--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="team-member">
                 <h3>Jenna Hilderman</h3>
                 <p>Student ID: V00870217</p>
-                <p>Jenna is pursuing a Bachelor of Engineering in Electrical Engineering at the University of Victoria. She is deeply engaged in a project on Maximum Power Point Tracking (MPPT) for photovoltaic systems. Her work for this project involves integrating an MPPT algorithm to improve performance, especially under partial shading conditions. Proficient in C, Python, HTML, CSS and Matlab, Jenna leverages her technical and analytical skills to tackle complex engineering challenges. Jenna is advancing her engineering career through continuous learning and innovation. Her adaptability to new technologies and methodologies drives her ambition to contribute significantly to sustainable energy.</p>
+                <p>Jenna is pursuing a Bachelor of Engineering in Electrical Engineering at the University of Victoria. Her work for this project involves integrating an MPPT algorithm for optimal performance, especially under partial shading conditions, and creating the project's webpage. Proficient in C, Python, HTML, CSS and Matlab, she leverages her technical and analytical skills to tackle the solar panel optimization challenge.</p>
             </div>
             <h3>Faculty Supervisor: Dr. Mihai Sima</h3>
             <p>Dr. Mihai Sima, an expert in computers, software, networking, electronics, and energy, supervises this project. His extensive knowledge and guidance have been greatly appreciated. Dr. Sima's expertise and support contributed to our project's progress and success.</p>
