--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="container">
             <h2>Design</h2>
             <div class="diagram">
-                <img src="block_diagram.png" alt="MPPT Solar Charge Controller Block Diagram">
+                <img src="block_diagram.png" alt="MPPT Solar Charge Controller Block Diagram" style="width: 100%; height: auto;">
                 <p>Figure 1: Block diagram of the MPPT Solar Charge Controller</p>
             </div>
             <p>
