--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="team-member">
                 <h3>Angel Ibelegbu</h3>
                 <p>Student ID: V00919730</p>
-                <p>About Angel!</p>
+                <p>Angel is a proactive electrical engineering student at the University of Victoria, graduating in June 2025. Her role in this project involves developing detailed project plans, managing the budget, and ensuring effective communication and collaboration among team members. Angel is recognized for her creativity, exceptional organizational skills, and ability to excel in fast-paced environments.</p>
             </div>
             <div class="team-member">
                 <h3>Jenna Hilderman</h3>
