added about ben and edited captions

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             <div class="team-member">
                 <h3>Ben Coupland</h3>
                 <p>Student ID: V00176669</p>
-                <p>About Ben!</p>
+                <p>
+                    Ben Coupland went back to school in pursuit of truth and greater knowledge of the things he loves, and to take a path that he knew he always had to take. At the same time he built a beautiful family with wife Marina and kids Alec (4) and Sarah (3).
+                </p>
             </div>
             <div class="team-member">
                 <h3>Angel Ibelegbu</h3>
