--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </p>
             <div class="diagram">
                 <img src="pviv.png" alt="I-V and P-V Curves" style="width: 100%; height: auto;">
-                <p>Figure 1: I-V and P-V curves of a photovoltaic panel showing the maximum power point for a single sunlight intensity</p>
+                <p>Figure 1: I-V and P-V curves of a photovoltaic panel showing the maximum power point for a single sunlight intensity.</p>
             </div>
             <p>
                 MPPT technology is essential for off-grid living and remote applications, enabling more reliable and consistent energy production. This project aims to design an efficient and cost-effective MPPT controller that will improve solar energy production for the average consumer.
@@ -81,7 +81,7 @@
             </p>
             <div class="diagram">
                 <img src="block_diagram.png" alt="MPPT Solar Charge Controller Block Diagram" style="width: 100%; height: auto;">
-                <p>Figure 2: Block diagram of the MPPT Solar Charge Controller</p>
+                <p>Figure 2: Block diagram of the MPPT Solar Charge Controller.</p>
             </div>
             <p>
                 The user interface allows users to monitor the charge controller. The MPPT controller sends data to a Blynk application for easy monitoring. The device is housed in a 3D-printed case. Future iterations will improve the interface and the housing for better functionality, durability, and aesthetics.
