added image of the team

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
     <section id="about">
         <div class="container">
             <h2>About the Team</h2>
+            <p>
+                
+            </p>
+            <div class="diagram">
+                <img src="team.jpg" alt="Team members" style="width: 100%; height: auto;">
+            </div>
             <div class="team-member">
                 <h3>Ben Coupland</h3>
                 <p>Student ID: V00176669</p>
