added to results and findings and changed the pviv photo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container">
             <h2>About the Team</h2>
             <p>
-                
+
             </p>
             <div class="diagram">
                 <img src="team.jpg" alt="Team members" style="width: 100%; height: auto;">
@@ -100,18 +100,29 @@
     <section id="results">
         <div class="container">
             <h2>Results & Findings</h2>
-            <ul>
-                <li>Successful implementation of the MPPT algorithm</li>
-                <li>Optimized energy extraction from solar panels under varying conditions</li>
-                <li>Efficient charging of a 12V lead-acid battery</li>
-                <li>Development of a custom PCB for the MPPT controller</li>
-            </ul>
+            <p>
+                The development of the MPPT solar charge controller project encountered significant challenges, resulting in a prototype that could have functioned better. Despite the setbacks, the project provided valuable insights and learning opportunities that will shape and improve future efforts.
+            </p>
+            <p>
+                The project highlighted the necessity for comprehensive testing of individual components prior to system integration. In the future, we recommend building breakout boards for each significant module to facilitate easier debugging of the integrated circuits. This approach would allow for more efficient identification and resolution of issues. Additionally, incorporating LEDs and photosensors can ensure the buck converters operate asynchronously to prevent the current from flowing back and burning the circuit. 
+            </p>
+            <p>
+                In conclusion, although the prototype did not achieve its intended functionality, the experience provided valuable insights into the challenges and complexities of MPPT solar charge controller development. These lessons will inform future projects to create reliable, efficient, off-grid solar energy solutions.
+            </p>
         </div>
     </section>
     <section id="acknowledgment">
         <div class="container">
             <h2>Acknowledgment</h2>
-            <p>We would like to thank our faculty supervisor, Dr. Mihai Sima, for his guidance and support throughout the project. Additionally, we extend our gratitude to our peers and the university staff who provided assistance and resources that contributed to the successful completion of this project.</p>
+            <p>
+                We are pleased to present the report on our Electrical Engineering Final Year Project. We express our heartfelt gratitude to the Department of Electrical and Computer Engineering at the University of Victoria for their constant support and guidance. Special thanks to our Project Supervisor, Dr. Miha Sima, for his invaluable feedback and expertise, and to our Teaching Assistant, Maryam Ahang, for her dedication and assistance in overcoming project challenges.
+            </p>
+            <p>
+                We also thank the chairman for their support and financial assistance, which provided access to essential materials and resources. Our appreciation extends to the Department Technical Staff for their technical support and for providing the necessary equipment, which was crucial for the practical implementation of our project.
+            </p>
+            <p>
+                Lastly, we are grateful to our families and friends for their unwavering encouragement and understanding throughout this journey, as well as the manufacturers and fabricators who supplied the components and tools needed for this project. Their contributions were vital in bringing our project to completion. Thank you all for your invaluable contributions and support.    
+            </p>
         </div>
     </section>
     <section id="report">
