added pdf of final report

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <h3>Progress Report</h3>
             <p><a href="ECE 499 - Progress Report - Group 19.pdf" target="_blank">Download Progress Report</a></p>
             <h3>Final Report</h3>
-            <p><a href="final-report.pdf" target="_blank">Download Final Report</a></p>
+            <p><a href="Final_Report_ECE499_Group19.pdf" target="_blank">Download Final Report</a></p>
         </div>
     </section>
     <section id="references">
